# manage-articles

./: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 72aee36d61f4_add_schema_articles.py  bf5b21e25ebf_create_articles_table.py
src/: api.py  cache.py  exceptions.py  main.py
src/articles/: controller.py  models.py  service.py
src/auth/: service.py
src/entities/: article.py
src/health/: controller.py  service.py
src/repositories/: article.py
